--- a/HPC_and_Singularty/HPC_Singularity_Presentation.Rmd
+++ b/HPC_and_Singularty/HPC_Singularity_Presentation.Rmd
@@ -27,11 +27,12 @@ output:
 .pull-right[
 ## Not covered:
 .baby-bear[
-* Using 'make'  
-* Using 'gcc'  
-* Using 'apt'  
-* Using 'docker'  
-* Using 'sbatch'  
+* Using 
+  + 'make'  
+  + 'gcc'  
+  + 'apt'  
+  + 'docker'  
+  + 'sbatch'  
 ]
 ]
 
@@ -64,45 +65,50 @@ output:
 
 ---
 
-# Which containers
-## Singularity > Docker
+# Why Containers
+## Reduce conflicts
+.center[![gromit_gif](images/gromit.gif)]
+
+???
+
+Without using containers, one must ensure that all modules that may be loaded at once are compatible, leading to a lot of tinkering with code.
+
+
+---
+
+# Singularity
 .pull-left[
 .baby-bear[
-    + HPC friendly (no root required for running)
-    + Reduce security issues
-    + Smaller overhead
-    + Segmented recipes
-    + Less community
-    + Can import dockerfiles anyways
+* HPC friendly
+  + No root required for running
+  + Reduce security issues<br></br>
+* Smaller overhead<br></br>
+* Segmented recipes<br></br>
+* Can import Docker recipes<br></br>
 ]
 ]
 .pull-right[
 .baby-bear[
-+ Steep Learning curve
-+ Some system-admin knowledge required 
-+ Developing technology
-+ Locale Inheritance
+* Steep Learning curve<br></br>
+* Some system-admin knowledge required
+  + apt-get installation methods<br></br>
+* Developing technology<br></br>
+* Locale Inheritance<br></br>
+* Small community<br></br>
 ]
 ]
 
 ???
 
-(apt-get installation methods)
-(some bugs fixed required)
  
 ---
 
 # Environment wrapping
-
-.pull-left[
 .baby-bear[
 + Containers and HPC scheduling initially can be quite overwhelming.<br></br> 
 + This diagram is not intended to intimidate but for debugging assistance.
 ]
-]
-.pull-right[
-.center[<img src=images/sbatch_singularity_diagram.png width=100%>]
-]
+.center[<img src=images/sbatch_singularity_diagram.png width=55%>]
 
 ---
 
@@ -136,7 +142,7 @@ output:
 .pull-left[
 ## DockerHub
 ```{bash, eval=FALSE}
-$ cat recipe.docker
+$ cat docker.recipe
 BootStrap: docker
 From: r-base:3.5.1
 
@@ -160,24 +166,25 @@ exec R ${@}
 
 # Building the container
 
-### Dockerhub Example
+.pull-left[
+## Dockerhub
 ```{bash, eval=FALSE}
 $ sudo singularity build \
   r_from_docker_3.5.2.simg recipe
 ```
-
-
-### Singularity Example
+]
+.pull-right[
+## SingularityHub
 ```{bash, eval=FALSE}
 $ sudo singularity build \
   r_from_shub_3.5.2.simg recipe
 ```
-
+]
 ---
 
 # Running the container
 
-With just those two lines we now have containers that can the R console!
+With just those two lines we now have containers that can run the R console!<br></br>
 ```{bash eval=FALSE}
 $ singularity run r_from_shub_3.5.2.simg
 ```
@@ -188,22 +195,22 @@ $ singularity run r_from_shub_3.5.2.simg
 
 .pull-left[
 .baby-bear[
-*Why shell*  
-Curious to see what's under the hood?
-We can shell into the container using the command below,
-use `exit` to exit the container.
+**Why shell**<br></br>
+Curious to see what's under the hood?  
+We can shell into the container using the command below.
+Use `exit` to exit the container.  
 ]
 ]
 .pull-right[
 .baby-bear[
-*Traversing activity*  
+**Traversing activity**<br></br>
 When inside the container try the following commands.  
 `ls /data`  
 `ls /home`  
 Which one of these worked? What does this mean?
 ]
 ]
-
+<br></br>
 ```{bash, eval=FALSE}
 $ singularity shell r_from_shub_3.5.2.simg
 ```
@@ -213,7 +220,7 @@ $ singularity shell r_from_shub_3.5.2.simg
 # Write a recipe
 .small-code[
 ```{bash, eval=FALSE}
-$ cat recipe.singularity
+$ cat singularity_v2.recipe
 BootStrap: shub
 From: MPIB/singularity-r:3.5.1
 
@@ -252,7 +259,7 @@ No worries, we can add [one](rprofile.site) in using the %files section.
 
 .small-code[
 ```{bash, eval=FALSE}
-$ cat recipe.singularity
+$ cat singularity_v3.recipe
 BootStrap: shub
 From: MPIB/singularity-r:3.5.1
 
@@ -266,14 +273,12 @@ r_profile.site /usr/local/lib/R/etc/Rprofile.site
 Rscript --vanilla -e 'install.packages("tidyverse")'
 ...
 
-%runscript
-exec R ${@}
+
 ```
 ]
 
 ???
 
-TODO: link to the rprofile file.
 
 ---
 
@@ -283,11 +288,11 @@ TODO: link to the rprofile file.
 Our container now runs R interactively,  
 however, this may not suit the needs of everyone.
 
-* Apps allow users to specify what commands they wish to run.
+* Apps allow users to specify what commands they wish to run.<br></br>
 * Apps can also have their own specific:
   + %files
   + %environment
-  + %post
+  + %post<br></br>
 
 Just specify with the %app prefix and complete with the app name.
 ]
@@ -302,7 +307,7 @@ But say our user just needs the R platform, not the interactive suite? We could 
 
 .small-code[
 ```{bash, eval=FALSE}
-$ cat recipe.singularity
+$ cat singularity_v4.recipe
 BootStrap: shub
 From: MPIB/singularity-r:3.5.1
 
@@ -327,8 +332,95 @@ exec Rscript ${@}
 
 ---
 
-# TODO
+# Environment
 
-commentary,
-environment,
-biocontainers
+Singularity environments can be managed in three ways, with the hierachies as follows.
+
+* exporting variables with the `SINGULARITYENV_` prefix prior to running.
+* exporting variables in %post or %apppost
+* exporting in %environment or %appenvironment
+
+For examples, please visit the [docs](https://www.sylabs.io/guides/2.5/user-guide/environment_and_metadata.html)
+
+
+---
+
+# BioContainers
+
+.pull-left[
+.baby-bear[
+Most common installations, can be much simpler than the previous example shown. <br></br> 
+[BiocContainers consortium](https://biocontainers.pro/) hosted by [quay](https://quay.io/search) means often only simple recipes are required.<br></br>
+BioContainers are often very compact (6Mb or less!)
+]
+]
+.pull-right[
+.small-code[
+```{bash, eval=FALSE}
+$ cat star_from_quay.2.7.0b.recipe
+Bootstrap: docker
+From: quay.io/biocontainers/star:2.7.0b--0
+
+%help
+Example:
+singularity run --bind /data:/data star --help
+
+%runscript
+exec STAR "${@}"
+
+%apprun standard
+exec STAR "${@}"
+
+%apprun long
+exec STARlong "${@}"
+```
+]
+]
+
+???
+
+---
+
+# Container to Module
+
+It would be nice if our user could just run the commands below.
+Since
++ Modules more common, no pipeline disruptions
++ User experience with singularity not required.<br></br>
+
+```{bash, eval=FALSE}
+module load star/2.7.0
+star --help
+```
+
+---
+
+# Container to Module
+
+We keep the module short and sweet as summarised below.
+We then write a bash wrapper to the bin path which wraps around the container script.
+
+See the template bash wrapper [here](https://gist.githubusercontent.com/alexiswl/6974927ab8da81f1e3dc2222db467486/raw/2ac3ea22e632408f972f557a367d1a67defb5530/templates_bash_wrapper.sh)
+
+```{bash, eval=FALSE}
+$ module show star/2.7.0
+-------------------------------------------------------------------
+$MODULEPATH/star/2.7.0:
+
+conflict         star
+prepend-path     PATH $CONTAINER_PATH/star/2.7.0/bin
+
+```
+
+---
+
+# Testing the installation
+
+```{bash, eval=FALSE}
+# Load module
+module load star/2.7.0
+# Run help script on module
+STAR --help
+# Try running help script through slurm
+srun --time=0-00:00:10 STAR --help
+```
