--- a/HPC_and_Singularty/HPC_Singularity_Presentation.Rmd
+++ b/HPC_and_Singularty/HPC_Singularity_Presentation.Rmd
@@ -435,7 +435,7 @@ srun --time=0-00:00:10 STAR --help
 .baby-bear[
 + [Singularity Documentation](https://www.sylabs.io/guides/2.5/user-guide/index.html)<br></br>
 + [BioContainers](https://biocontainers.pro/)<br></br>
-+ [This Presentation in Markdown Format](./HPC_and_Singlarty.html)<br></br>
++ [This Presentation in Markdown Format](./HPC_and_Singularty.html)<br></br>
 + [Vagrant Boxes for building containers locally](https://app.vagrantup.com/sylabs)<br></br>
 + [My Email Address](mailto:Alexis.Lucattini@agrf.org.au)<br></br>
 + [Module/Container Gist](https://gist.github.com/alexiswl/6974927ab8da81f1e3dc2222db467486)
