--- a/Long_Reads_QLD/Long_Reads_QLD.Rmd
+++ b/Long_Reads_QLD/Long_Reads_QLD.Rmd
@@ -27,8 +27,8 @@ output:
 
 .pull-right[
 .large[Platforms]
-* ONT
-* PacBio
+* ONT <img src=./images/ont_logo.png width=20%>
+* PacBio <img src=./images/pacbio_logo.png width=20%>
 ]
 
 
@@ -84,7 +84,7 @@ class: long-slide
 .pull-left[
 .baby-bear[
 **Basecalling**
-* Signal to Base
+* Compressed Signal Data
 * Local alignments
 
 **Data QC**
@@ -168,6 +168,19 @@ MAYBE TODO Add in slide with minimap2 and nglmr, or put this in the SV slide.
 
 class: ont-slide
 
+# Nanopore sequencing
+
+
+???
+
+# TODO
+Place picture of the  MinION and PromethION
+Add video of the nanopore sequencing technology
+
+---
+
+class: ont-slide
+
 ## Nanopore Sequencing - PMI
 
 .pull-left[
@@ -187,9 +200,11 @@ class: ont-slide
 * Relatively expensive per base
 ]
 
+???
+
 # TODO
 
-Place ONT VIDEO in here
+Add yields
 
 ---
 
@@ -206,7 +221,7 @@ class: ont-slide
 
 ???
 
-Not just the algorithm, but the training data it ahas been exposed to. We often see that the quality of human data to be a bit higher than other data sets.
+Not just the algorithm, but the training data it a has been exposed to. We often see that the quality of human data to be a bit higher than other data sets.
 
 ---
 
@@ -226,7 +241,11 @@ class: ont-slide
 
 ???
 
-NANOPORE SPECIFIC
+The wub package contains a large range of plotting tools,  
+for nanopore sequencing. 
+
+Some of the plots aren't perfect but everything comes out in a picklable.
+These can be easily repimported into python and be re-plotted using the matplotlib or seaborn modules. This way you can also retitle or recaption the plot as needed
 
 ---
 
@@ -244,7 +263,8 @@ class: ont-slide
 
 ???
 
-NANOPORE SPECIFIC
+We've seen that the mapping rates 
+
 
 ---
 
@@ -270,7 +290,7 @@ class: ont-slide
 
 ???
 
-NANOPORE SPECIFIC
+Nanoplot is well supported and can generate alignment plots, plots of fastq scores, yield plots over time. Yield plots over time can show if our sequencing pores have  been contaminated.
 
 ---
 
@@ -285,7 +305,7 @@ Ryan Wick's repos set for:
 
 ???
 
-NANOPORE SPECIFIC
+Ryan Wick from Bio21 has also generated many easy-to-run nanopore qc programs. Nanopore reads like all other sequencing reads have adapters, so please make sure you trim them prior to generating your assemblies.
 
 ---
 
@@ -296,11 +316,11 @@ class: ont-slide
 Jared T. Simpson's [nanopolish](https://github.com/jts/nanopolish) uses signal-level (fast5) data to:
 * Detecting methylation
 * Calling SNP level variants
-* Polishing genomes
+* Polishing genomes through consensus
 
 ???
 
-NANOPORE SPECIFIC
+While fast5 data is clunky heavy and not user friendly, this doesn't mean you should through it a
 
 ---
 
@@ -383,7 +403,7 @@ class: pacbio-slide
 
 # Pacific Biosciences
 
-
+[<img src=./images/pacbio_fridge.jpg width=80%>](https://www.youtube.com/watch?v=WMZmG00uhwU&feature=youtu.be)
 
 ???
 
@@ -391,33 +411,56 @@ Greater maturity in bioinformatics components. Much of what needs to be done can
 Read number restricted by the number of wells - rather than the amount of sequencing. Data comes out as a really large movie that is then converted to unaligned bam files.
 Provide estimates of sequencing length and yield from slides. 
 
-# TODO
-Need an intro-type 
-Add expected yields in here
-ADD https://www.youtube.com/watch?v=WMZmG00uhwU&feature=youtu.be to link
-Add image https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwiMqM-Z5c_iAhVCVH0KHUsACRsQjRx6BAgBEAU&url=https%3A%2F%2Fgithub.com%2Fben-lerch%2FCCS-3.0%2Fblob%2Fmaster%2FREADME.md&psig=AOvVaw1pDeCoQNzBw6_3pbCJqCIc&ust=1559736446254122
+---
+
+# PacBio - PMI
+
+.pull-left[
+**Technical**
+* Single-molecule
+* Sequence-by-replication approach
+* Long-reads with high consensus.
+* Well-supported bioinformatics
+* Finite limit of number-of-molecules.
+* Output:
+  + 10-25 Gbs Amplicon
+  + 5-10 Gbs gDNA - n50 10-15Kb
+]
+
+.pull-right[
+**Financial**
+* Large-start up cost.
+* Relatively expensive per base
+]
+
+???
+
+The pacbio currently provides a comparable level of throughput to a MinION run but has benefits of having an improved error-rate and a reduction in systematic bias.
 
 ---
 
 # Introduction to SMRTLINK
 
 Bioinformatics at a click-of-a-button!
-Easy stand-alone workflows that cover much of the capability of the device.
-BAM to CSS.
-Assembly.
-SV Calling
-SNP and INDEL calling on long-range amplicons.
-
+* Easy stand-alone workflows 
+  + cover much of the capability of the device.
+  + runs scatter-gather workflows across an HPC
+* BAM to CSS.
+* SV Calling
+* De novo Assembly.
+* SNP and INDEL calling on long-range amplicons.
 
 ???
 
 Our SMRT-LINK runs on a singularity container, an is an on-demand device.
 So only running when we need it!
-SMRTLINK and its associated command-line version offer scatter-gather algorithms for each of the different services that we offer.
+SMRTLINK and its associated command-line version offer scatter-gather algorithms for each of the different services that we offer. I plan to put a link up on a mini-tutorial of how to set up your own SMRTLINK portal.
 
 ---
 
 # Subread vs CCS Read 
+
+<img src='image/subread_to_ccs.png', width=100%>
 
 ???
 
@@ -426,36 +469,50 @@ This increases the accuracy in the read with every additional cycle. Often with 
 
 Lima is a PacBio developed algorithm for converting subreads into concensus reads.
 
-https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwjV6anVoNLiAhWPeisKHayrDEYQjRx6BAgBEAU&url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&ust=1559821129992274
-
-Or
-https://www.google.com/url?sa=i&rct=j&q=&esrc=s&source=images&cd=&ved=2ahUKEwj6st7foNLiAhVTfH0KHbhKCBkQjRx6BAgBEAU&url=http%3A%2F%2Ffiles.pacb.com%2Fsoftware%2Fsmrtanalysis%2F2.2.0%2Fdoc%2Fsmrtportal%2Fhelp%2F!SSL!%2FWebhelp%2FPortal_PacBio_Glossary.htm&psig=AOvVaw1PQHML_fwy1Bc8i-c0ekeN&ust=1559821129992274
-
 ---
 
 # PacBio IsoSeq
 
+.pull-left[
++ Full length transcripts.
++ High-consensus rates.
++ Well defined bioinformatics workflows.
++ Complex normalisation methods - pre-QC.
+]
+.pull-right[
+<img src='images/exone_in_genes.png' width=80%>
+]
+
 ???
 
-Utilisation of CCS, full-length transcriptome. Goes through many times allowing for full assembly.
-
-# TODO 
+Utilisation of CCS, full-length transcriptome. Goes through many times allowing for full assembly. Provide a picture of an entire gene for this slide.
 Find short read comparison. Exon proportions slide to place in.
 
 ---
 
 # SV Calling with PacBio
 
+.pull-left[
+* PacBio supported pipeline is pbsv
+  + available in smrtlink.
+* Other community-developed pipelines include:
+  + [sniffles](https://github.com/fritzsedlazeck/Sniffles
+)
+  + [smrtsv2](https://github.com/EichlerLab/smrtsv2
+)
+]
+.pull-right[
+* Both also compatible with ONT data.
+]
+
 ???
 
-# TODO
-Easy work with SMRTLINK but can create your own command as well.
+Easy work with SMRTLINK but can use community pipelines as well.
 Get a picture of ngmlr vs minimap2.
 
 https://www.pacb.com/products-and-services/analytical-software/whole-genome-sequencing/
 https://github.com/fritzsedlazeck/Sniffles
 
-https://github.com/EichlerLab/smrtsv2
 
 ---
 
@@ -463,7 +520,7 @@ https://github.com/EichlerLab/smrtsv2
 
 ???
 
-TODO:
+# TODO:
 LAA amplicons can resolve haplotyping information and assembly of small important regions. Reducing the cost of sequencing yield whilst also increasing coverage of the important region.
 
 ---
@@ -505,8 +562,22 @@ Like the rivalry between Microsoft and Apple, two different operating systems wi
 
 # Other things that may interest you
 
+Working with Singularity.
+Working with Vagrant.
+SMRTLINK On Demand - email me and I'll give you a brief on how to set it up.
+
+
 ???
 
 SMRTLINK On Demand. - coming soon.
 Singularity.
 Vagrant.
+
+---
+
+# Thank you slide
+
+???
+
+#TODO
+Add thank yous
